--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				</section>
 
 				<section>
-					<h2>What we'll cover:</h2>
+					<h2>Overview:</h2>
 					<ul>
 						<li>Flexbox</li>
 						<li>CSS Grids</li>
@@ -70,6 +70,11 @@
 
 					<section>
 						<h3>When to Use</h3>
+						<!-- <ul>
+							<li>Columns of matching height</li>
+							<li>Proportionately scaling widths</li>
+							<li>Changing DOM order</li>
+						</ul> -->
 					</section>
 
 					<section>
@@ -77,7 +82,24 @@
 					</section>
 
 					<section>
-						<code>How to Use</code>
+						<p>Apply Your Base Setting to the Wrapper<p>
+					</section>
+
+					<section>
+						<ul>
+							<li>Display:flex</li>
+							<li>Flex-direction (row, column, reverse)</li>
+							<li>Flex-wrap - what to do when the content gets too wide (defaults to not wrapping)</li>
+							<li>Flex-flow = flex-direction + flex-wrap</li>
+							<li>Justify-content (left,right alignment)</li>
+							<li>Align-items (top,bottom alignment in relation to each other)</li>
+							<li>Align-content (top,bottom alignment in relation to the container)</li>
+						</ul>
+					</section>
+
+					<section>
+						<p>Format the items to flow within<p>
+						<code></code>
 					</section>
 
 					<section>
